--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   share_plus: ^7.2.1
   delete_un_used_assets: ^1.0.1
   flutter_email_sender: ^6.0.3
+  logger: 2.2.0
 
 dev_dependencies:
   flutter_test:
