--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -66,6 +66,7 @@ dependencies:
   delete_un_used_assets: ^1.0.1
   flutter_email_sender: ^5.0.2
   modal_progress_hud_nsn: ^0.4.0
+  rename_app: ^1.3.2
 
 
 dev_dependencies:
