--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_email_sender: ^5.0.2
   modal_progress_hud_nsn: ^0.4.0
   rename_app: ^1.3.2
+  shimmer: ^3.0.0
 
 
 dev_dependencies:
