--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,21 +27,21 @@ dependencies:
   get: ^4.6.5
   email_validator: ^2.0.1
   provider: ^6.1.1
-  readmore: ^2.2.0
+  readmore: ^3.0.0
   flutter_image_slideshow: ^0.1.6
   carousel_slider: ^4.2.1
-  intl: 0.18.1
+  intl: ^0.19.0
   flutter_screenutil: ^5.9.0
   animated_text_kit: ^4.2.2
   internet_connection_checker: ^1.0.0+1
-  connectivity_plus: ^5.0.2
+  connectivity_plus: ^6.0.3
   jiffy: ^6.2.1
   shared_preferences: ^2.2.2
   url_launcher: ^6.0.0
-  share_plus: ^7.2.1
+  share_plus: ^9.0.0
   delete_un_used_assets: ^1.0.1
-  flutter_email_sender: ^5.0.2
-  modal_progress_hud_nsn: ^0.4.0
+  flutter_email_sender: ^6.0.3
+  modal_progress_hud_nsn: ^0.5.1
   rename_app: ^1.3.2
   shimmer: ^3.0.0
 
@@ -54,7 +54,7 @@ dev_dependencies:
     sdk: flutter
 
  
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 
 
 flutter:
