--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   animated_text_kit: ^4.2.2
   internet_connection_checker: ^1.0.0+1
-  connectivity_plus: ^6.0.3
+  # connectivity_plus: ^6.0.3
   jiffy: ^6.2.1
   shared_preferences: ^2.2.2
   url_launcher: ^6.0.0
@@ -45,8 +45,6 @@ dependencies:
   rename_app: ^1.3.2
   shimmer: ^3.0.0
 
-
-  crypto: any
   dio: ^5.4.3+1
   flutter_image_compress: ^2.3.0
   flutter_svg: ^2.0.10+1
