--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   dio: ^5.4.3+1
   flutter_image_compress: ^2.3.0
   flutter_svg: ^2.0.10+1
+  table_calendar: ^3.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
