--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   table_calendar: ^3.1.2
   flutter_dotenv: ^5.1.0
+  data_table_2: ^2.5.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,6 +65,7 @@ flutter:
 
   assets:
     - assets/page-1/images/
+    - assets/ep/
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
