--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,7 +36,7 @@ android {
     aaptOptions {  
         cruncherEnabled = false  
     }
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -56,7 +56,7 @@ android {
         applicationId "com.sortmycollege"
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 23
+        versionCode 24
         versionName flutterVersionName
     }
 
