--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   table_calendar: ^3.1.2
   flutter_dotenv: ^5.1.0
   data_table_2: ^2.5.15
+  
+  device_info_plus: ^10.1.2
+  permission_handler: ^11.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
