--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   data_table_2: ^2.5.15
   permission_handler: ^11.3.1
+  cached_network_image: ^3.4.0
   
 dev_dependencies:
   flutter_test:
