--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,9 @@ dependencies:
   dio: ^5.4.3+1
   flutter_svg: ^2.0.10+1
   flutter_dotenv: ^5.1.0
-  data_table_2: ^2.5.15
+  # data_table_2: ^2.5.15
   cached_network_image: ^3.4.0
-  table_calendar: ^3.1.2
-  scrollable_positioned_list: ^0.3.8
+
   
 dev_dependencies:
   flutter_test:
